added toggle for camera preview during use

--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@ The sun rises over the mountains..."
                         <span class="btn-icon">↺</span>
                         <span class="btn-label">Reset</span>
                     </button>
+                    <button id="toggleCameraButton" class="control-btn" title="Toggle Camera Preview (V key)">
+                        <span class="btn-icon">📹</span>
+                        <span class="btn-label">Hide Cam</span>
+                    </button>
                     <button id="stopRecordingButton" class="control-btn stop-record-btn hidden" title="Stop Recording (Ctrl+R)">
                         <span class="btn-icon">⏹</span>
                         <span class="btn-label">Stop Rec</span>
