Add line break support, iOS fixes, camera toggle, MP4 recording, and mobile UI improvements

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                         placeholder="Type or paste your script here...
                         
 Example:
-Hello everyone, welcome to my poetry channel.
-Today I'll be sharing my latest piece about nature.
-The sun rises over the mountains..."
+The only way to do great work is to love what you do. - Steve Jobs
+In the end, we will remember not the words of our enemies, but the silence of our friends. - Martin Luther King Jr.
+Life is what happens when you're busy making other plans. - John Lennon"
                         rows="10"
                     ></textarea>
                 </div>
